# netwhy

./: README.md  pyproject.toml
src/netwhy/: __init__.py  cli.py  core.py  dns_checks.py  http_checks.py  ping.py
tests/: __init__.py  test_cli.py  test_dns.py  test_http.py  test_ping.py
